; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_release_tree_content.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_release_tree_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.avail_tree_content = type { %struct.avail_tree_content*, i32 }
%struct.tree_content = type { i32 }

@avail_tree_table = common dso_local global %struct.avail_tree_content** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tree_content*)* @release_tree_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_tree_content(%struct.tree_content* %0) #0 {
  %2 = alloca %struct.tree_content*, align 8
  %3 = alloca %struct.avail_tree_content*, align 8
  %4 = alloca i32, align 4
  store %struct.tree_content* %0, %struct.tree_content** %2, align 8
  %5 = load %struct.tree_content*, %struct.tree_content** %2, align 8
  %6 = bitcast %struct.tree_content* %5 to %struct.avail_tree_content*
  store %struct.avail_tree_content* %6, %struct.avail_tree_content** %3, align 8
  %7 = load %struct.avail_tree_content*, %struct.avail_tree_content** %3, align 8
  %8 = getelementptr inbounds %struct.avail_tree_content, %struct.avail_tree_content* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @hc_entries(i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load %struct.avail_tree_content**, %struct.avail_tree_content*** @avail_tree_table, align 8
  %12 = load i32, i32* %4, align 4
  %13 = zext i32 %12 to i64
  %14 = getelementptr inbounds %struct.avail_tree_content*, %struct.avail_tree_content** %11, i64 %13
  %15 = load %struct.avail_tree_content*, %struct.avail_tree_content** %14, align 8
  %16 = load %struct.avail_tree_content*, %struct.avail_tree_content** %3, align 8
  %17 = getelementptr inbounds %struct.avail_tree_content, %struct.avail_tree_content* %16, i32 0, i32 0
  store %struct.avail_tree_content* %15, %struct.avail_tree_content** %17, align 8
  %18 = load %struct.avail_tree_content*, %struct.avail_tree_content** %3, align 8
  %19 = load %struct.avail_tree_content**, %struct.avail_tree_content*** @avail_tree_table, align 8
  %20 = load i32, i32* %4, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds %struct.avail_tree_content*, %struct.avail_tree_content** %19, i64 %21
  store %struct.avail_tree_content* %18, %struct.avail_tree_content** %22, align 8
  ret void
}

declare dso_local i32 @hc_entries(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
